--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "codecov.io": "^0.1.6",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.23.0",
     "enzyme": "^2.4.0",
     "eslint": "^1.10.3",
@@ -91,9 +92,9 @@
     "tether": "^1.3.2"
   },
   "scripts": {
-    "build": "NODE_ENV=production grunt build",
+    "build": "cross-env NODE_ENV=production grunt build",
     "start": "node server.js",
-    "test": "NODE_ENV=test grunt travis",
+    "test": "cross-env NODE_ENV=test grunt travis",
     "eslint": "eslint **/*.jsx",
     "prepublish": "npm run build",
     "codecov": "cat coverage/*/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js"
